# oxideav-mjpeg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml
benches/: codec.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arith_decode.rs  decode.rs  jpeg_progressive_self_roundtrip.rs  jpeg_self_roundtrip.rs  libjpeg_encode_oxideav_decode.rs  oxideav_encode_libjpeg_decode.rs  rtp_depacketize.rs  rtp_packetize.rs
fuzz/src/: lib.rs
src/: container.rs  decoder.rs  encoder.rs  error.rs  image.rs  lib.rs  mjpeg_container.rs  registry.rs  rtp.rs
src/jpeg/: arith.rs  color.rs  dct.rs  huffman.rs  inspect.rs  markers.rs  mod.rs  parser.rs  quant.rs  zigzag.rs
tests/: cmyk_roundtrip.rs  cross_decode_repro.rs  decode_real_jpeg.rs  dnl.rs  docs_corpus.rs  external_roundtrip.rs  fuzz_repro.rs  hierarchical.rs  hierarchical_arith.rs  hierarchical_dct.rs  inspect.rs  jpeg_container.rs  lossless_roundtrip.rs  roundtrip.rs  seek.rs
