[package]
name = "oxideav-mjpeg"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mjpeg"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG / Motion-JPEG codec for oxideav — baseline, extended-sequential, and progressive decode; baseline and progressive encode"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mjpeg"
keywords = ["multimedia", "mjpeg", "jpeg", "video", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
