[package]
name = "oxideav-mjpeg"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-mjpeg"
authors = ["Mark Karpeles"]
description = "Pure-Rust JPEG / Motion-JPEG codec for oxideav — baseline, extended-sequential, and progressive decode; baseline and progressive encode"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-mjpeg"
keywords = ["multimedia", "mjpeg", "jpeg", "video", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
# libloading powers the `dlopen`-based libturbojpeg interop in
# `tests/external_roundtrip.rs`. No `*-sys` crate, no libjpeg /
# libjpeg-turbo source pulled into the dep tree — the test loads
# the system shared library at runtime and skips silently when it
# isn't installed. Mirrors the fuzz harness setup in
# `fuzz/Cargo.toml`.
libloading = "0.8"
