[package]
name = "oxideav-mjpeg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"
# libloading is the only libjpeg-turbo interop: each cross-decode harness
# `dlopen`s the system-installed libturbojpeg at startup. No `*-sys` crate,
# no libjpeg / libjpeg-turbo source pulled into the dep tree. Harnesses
# skip silently when libturbojpeg isn't installed (see fuzz/src/lib.rs).
libloading = "0.8"

[dependencies.oxideav-mjpeg]
path = ".."

[lib]
name = "oxideav_mjpeg_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "jpeg_self_roundtrip"
path = "fuzz_targets/jpeg_self_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "libjpeg_encode_oxideav_decode"
path = "fuzz_targets/libjpeg_encode_oxideav_decode.rs"
test = false
doc = false

[[bin]]
name = "oxideav_encode_libjpeg_decode"
path = "fuzz_targets/oxideav_encode_libjpeg_decode.rs"
test = false
doc = false

[[bin]]
name = "jpeg_progressive_self_roundtrip"
path = "fuzz_targets/jpeg_progressive_self_roundtrip.rs"
test = false
doc = false

# Robustness target — arbitrary bytes into the public decoder; the
# bar is "no panic". No oracle, no round-trip; round-trip coverage
# lives in the other targets in this same directory. See
# `fuzz_targets/decode.rs` for the documented crash surfaces.
[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

# Robustness target — arbitrary bytes into the RFC 2435 RTP/JPEG
# depacketizer. Exercises `parse_main_header`, `parse_restart_header`,
# the §3.1.8 in-band quantization-table header parser, the fragment
# reassembly buffer (24-bit offset), and the §4.2 static-Q table
# cache across multiple synthetic "packets" per fuzz iteration. Bar
# is "no panic". See `fuzz_targets/rtp_depacketize.rs` for the
# documented attack surfaces.
[[bin]]
name = "rtp_depacketize"
path = "fuzz_targets/rtp_depacketize.rs"
test = false
doc = false

# Robustness target — arbitrary bytes into the RFC 2435 RTP/JPEG
# packetizer. Exercises the `fn parse_jpeg` wire-segment walker
# (SOI / SOF0 / SOF1 / DQT / DRI / SOS / RSTn / EOI parsing with
# big-endian segment length fields), the QMode validation, and the
# scan-fragmentation loop. Both `QMode::Quality(1..=99)` and
# `QMode::InBand(128..=255)` are sampled per iteration. Bar is "no
# panic". See `fuzz_targets/rtp_packetize.rs` for the documented
# attack surfaces.
[[bin]]
name = "rtp_packetize"
path = "fuzz_targets/rtp_packetize.rs"
test = false
doc = false
